# HackAI_Hack-230374

./: .env  README.md  pyproject.toml
src/: data.txt  main.py
src/agents/monitor/: monitor.py
src/messages/: messages.py
src/utills/: getTime.py  notification.py  saveData.py  weather.py
